--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "jspdf": "^3.0.1",
+        "jspdf-autotable": "^5.0.2",
         "laravel-vite-plugin": "^1.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.2.0",
@@ -40,6 +42,7 @@
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "xlsx": "^0.18.5",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
